--- a/raddit/Gemfile
+++ b/raddit/Gemfile
@@ -16,6 +16,7 @@ gem 'coffee-rails', '~> 4.0.0'
 
 
 gem 'devise', '~> 3.3.0'
+gem 'bootstrap-sass', '~> 3.2.0.2'
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
